# dhan-docker

./: .dockerignore  .env.example  .gitignore  Caddyfile  Caddyfile.template  DOCKERHUB.md  Dockerfile  Dockerfile.caddy  Dockerfile.lab  Dockerfile.unified  README.md  account_details.py  authentication.py  dashboard.py  data_analysis.ipynb  data_querying.py  docker-compose.unified.yml  docker-compose.yml  entrypoint-unified.sh  entrypoint.sh  generate_env.py  instruments_search.py  pyproject.toml  requirement.txt  supervisord.conf
.streamlit/: config.toml
app/: main.py
app/routes/: account.py  auth.py  home.py  lab.py  search.py  token.py
app/static/: style.css
app/templates/: account.html  authentication.html  base.html  home.html  lab.html  login.html  search.html
dhan-chrome/: .com.google.Chrome.pnGRSR  ChromeFeatureState  Local State
dhan-chrome/Default/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data  passkey_enclave_state
dhan-chrome/GrShaderCache/: data_1  index
dhan-chrome/GraphiteDawnCache/: data_0  data_1  data_2  f_00000d  f_00000e  index
dhan-chrome/Safe Browsing/: ChromeExtMalware.store  UrlBilling.store  UrlBilling.store.4_13414841030252023  UrlCsdAllowlist.store  UrlCsdDownloadAllowlist.store  UrlHighConfidenceAllowlist.store  UrlHighConfidenceAllowlist.store.32_13414841030244876  UrlMalBin.store  UrlMalBin.store.4_13414841030248675  UrlMalware.store  UrlMalware.store.4_13414841030245769  UrlSoceng.store  UrlSubresourceFilter.store  UrlSubresourceFilter.store.4_13414841030254608  UrlSuspiciousSite.store  UrlSuspiciousSite.store.4_13414841030248044  UrlUws.store  UrlUws.store.4_13414841030247033
dhan-chrome/ShaderCache/: data_1  (+1 more)
notebooks/: getting_started.ipynb
(+481 files in other folders)
