[project]
name = "dhan-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dhanhq>=2.2.0rc1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "notebook>=7.5.3",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "playwright>=1.58.0",
    "plotly>=6.5.2",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.54.0",
    "tabulate>=0.9.0",
    "watchdog>=6.0.0",
]
