[project]
name = "dhan-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dhanhq>=2.2.0",
    "fastapi>=0.115.0",
    "ipykernel>=7.1.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.0",
    "notebook>=7.5.3",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "playwright>=1.58.0",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.9",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
    "uvicorn[standard]>=0.30.0",
]
