[project]
name = "dhan-trading-dashboard"
version = "0.1.0"
description = "Self-hosted trading dashboard for the DhanHQ platform"
requires-python = ">=3.12"
dependencies = [
    "dhanhq>=2.2.0",
    "fastapi>=0.115.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.0",
    "pandas>=2.3.3",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.9",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
    "uvicorn[standard]>=0.30.0",
    "jupyterlab>=4.5.0",
    "pandas-ta>=0.4.0",
    "numpy>=2.0.0",
    "matplotlib>=3.10.0",
    "plotly>=6.0.0",
]

[tool.uv]
package = false
